# mujoco-models

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
models/barkour/: BUILD.bazel
models/unitree_go1/: BUILD.bazel  go1.xml  go1_mjx.xml  scene.xml
models/unitree_go2/: go2.xml  go2_estimation_2.xml  scene_estimation.xml
models/walter_sr/: BUILD.bazel  WaLTER_Senior.xml  scene_walter_sr.xml
